--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pages/index.css">
-    <title>Mesto</title>
+    <title>Место</title>
 </head>
 <body class="page">
   <header class="header">
@@ -17,25 +17,12 @@
       <div class="profile__info">
         <div class="profile__name-container">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button">
-
+          <button type="button" class="profile__edit-button">
           </button>
-          <div class="popup">
-            <form class="popup__container">
-              <h2 class="popup__title">Редактировать профиль</h2>
-              <input type="text" class="popup__input" value="Жак-Ив Кусто">
-              <input type="text" class="popup__input" value="Исследователь океана">
-              <button class="popup__save-button">
-                Сохранить
-              </button>
-              <button class="popup__close-button"></button>
-            </form>
-          </div>
-
         </div>
         <p class="profile__calling">Исследователь океана</p>
       </div>
-      <button class="profile__add-button">
+      <button type="button" class="profile__add-button">
       </button>
     </section>
     <section class="places">
@@ -43,34 +30,52 @@
         <li class="places__list-item">
           <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="" class="places__image">
           <h2 class="places__name">Карачаевск</h2>
-          <button class="places__like-button"></button>
+          <button type="button" class="places__like-button"></button>
         </li>
         <li class="places__list-item">
           <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="" class="places__image">
           <h2 class="places__name">Гора Эльбрус</h2>
-          <button class="places__like-button"></button>
-        </li><li class="places__list-item">
+          <button type="button" class="places__like-button"></button>
+        </li>
+        <li class="places__list-item">
           <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="" class="places__image">
           <h2 class="places__name">Домбай</h2>
-          <button class="places__like-button"></button>
-        </li><li class="places__list-item">
+          <button type="button" class="places__like-button"></button>
+        </li>
+        <li class="places__list-item">
           <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="" class="places__image">
           <h2 class="places__name">Гора Эльбрус</h2>
-          <button class="places__like-button"></button>
-        </li><li class="places__list-item">
+          <button type="button" class="places__like-button"></button>
+        </li>
+        <li class="places__list-item">
           <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="" class="places__image">
           <h2 class="places__name">Карачаевск</h2>
-          <button class="places__like-button places__like-button_active"></button>
-        </li><li class="places__list-item">
+          <button type="button" class="places__like-button places__like-button_active"></button>
+        </li>
+        <li class="places__list-item">
           <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="" class="places__image">
           <h2 class="places__name">Карачаево-Черкессия</h2>
-          <button class="places__like-button"></button>
+          <button type="button" class="places__like-button"></button>
         </li>
       </ul>
     </section>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
+    <div class="popup">
+      <div class="popup__container">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <button class="popup__close-button"></button>
+        <form name="popup__edit-form" class="popup__form">
+          <input type="text" name="popup__input_type_name" class="popup__input popup__input_type_name" value="Жак-Ив Кусто">
+          <input type="text" name="popup__input_type_calling" class="popup__input popup__input_type_calling" value="Исследователь океана">
+          <button type="submit" class="popup__save-button">
+            Сохранить
+          </button>
+        </form>
+
+      </div>
+    </div>
   </main>
 </body>
 </html>
