--- a/index.html
+++ b/index.html
@@ -17,45 +17,45 @@
       <div class="profile__info">
         <div class="profile__name-container">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button type="button" class="profile__edit-button">
+          <button type="button" aria-label="Редактировать профиль" class="profile__edit-button">
           </button>
         </div>
         <p class="profile__calling">Исследователь океана</p>
       </div>
-      <button type="button" class="profile__add-button">
+      <button type="button" aria-label="Добавить профиль" class="profile__add-button">
       </button>
     </section>
     <section class="places">
       <ul class="places__list">
-        <li class="places__list-item">
-          <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="" class="places__image">
-          <h2 class="places__name">Карачаевск</h2>
-          <button type="button" class="places__like-button"></button>
+        <li class="place">
+          <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм" class="place__image">
+          <h2 class="place__name">Карачаевск</h2>
+          <button type="button" aria-label="like" class="place__like-button"></button>
         </li>
-        <li class="places__list-item">
-          <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="" class="places__image">
-          <h2 class="places__name">Гора Эльбрус</h2>
-          <button type="button" class="places__like-button"></button>
+        <li class="place">
+          <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="place__image">
+          <h2 class="place__name">Гора Эльбрус</h2>
+          <button type="button" aria-label="like" class="place__like-button"></button>
         </li>
-        <li class="places__list-item">
-          <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="" class="places__image">
-          <h2 class="places__name">Домбай</h2>
-          <button type="button" class="places__like-button"></button>
+        <li class="place">
+          <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="Горы Домбай" class="place__image">
+          <h2 class="place__name">Домбай</h2>
+          <button type="button" aria-label="like" class="place__like-button"></button>
         </li>
-        <li class="places__list-item">
-          <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="" class="places__image">
-          <h2 class="places__name">Гора Эльбрус</h2>
-          <button type="button" class="places__like-button"></button>
+        <li class="place">
+          <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="place__image">
+          <h2 class="place__name">Гора Эльбрус</h2>
+          <button type="button" aria-label="like" class="place__like-button"></button>
         </li>
-        <li class="places__list-item">
-          <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="" class="places__image">
-          <h2 class="places__name">Карачаевск</h2>
-          <button type="button" class="places__like-button places__like-button_active"></button>
+        <li class="place">
+          <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="Сентинский храм" class="place__image">
+          <h2 class="place__name">Карачаевск</h2>
+          <button type="button" aria-label="like" class="place__like-button place__like-button_active"></button>
         </li>
-        <li class="places__list-item">
-          <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="" class="places__image">
-          <h2 class="places__name">Карачаево-Черкессия</h2>
-          <button type="button" class="places__like-button"></button>
+        <li class="place">
+          <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм" class="place__image">
+          <h2 class="place__name">Карачаево-Черкессия</h2>
+          <button type="button" aria-label="like" class="place__like-button"></button>
         </li>
       </ul>
     </section>
@@ -65,7 +65,7 @@
     <div class="popup">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <button class="popup__close-button"></button>
+        <button type="button" aria-label="Закрыть форму" class="popup__close-button"></button>
         <form name="popup__edit-form" class="popup__form">
           <input type="text" name="popup__input_type_name" class="popup__input popup__input_type_name" value="Жак-Ив Кусто">
           <input type="text" name="popup__input_type_calling" class="popup__input popup__input_type_calling" value="Исследователь океана">
