--- a/index.html
+++ b/index.html
@@ -27,36 +27,6 @@
     </section>
     <section class="places">
       <ul class="places__list">
-        <!-- <li class="place">
-          <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм" class="place__image">
-          <h2 class="place__name">Карачаевск</h2>
-          <button type="button" aria-label="like" class="place__like-button"></button>
-        </li>
-        <li class="place">
-          <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="place__image">
-          <h2 class="place__name">Гора Эльбрус</h2>
-          <button type="button" aria-label="like" class="place__like-button"></button>
-        </li>
-        <li class="place">
-          <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="Горы Домбай" class="place__image">
-          <h2 class="place__name">Домбай</h2>
-          <button type="button" aria-label="like" class="place__like-button"></button>
-        </li>
-        <li class="place">
-          <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="place__image">
-          <h2 class="place__name">Гора Эльбрус</h2>
-          <button type="button" aria-label="like" class="place__like-button"></button>
-        </li>
-        <li class="place">
-          <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="Сентинский храм" class="place__image">
-          <h2 class="place__name">Карачаевск</h2>
-          <button type="button" aria-label="like" class="place__like-button place__like-button_active"></button>
-        </li>
-        <li class="place">
-          <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="Сентинский храм" class="place__image">
-          <h2 class="place__name">Карачаево-Черкессия</h2>
-          <button type="button" aria-label="like" class="place__like-button"></button>
-        </li> -->
       </ul>
     </section>
     <footer class="footer">
@@ -93,7 +63,7 @@
 
     <div class="popup" id="image-popup">
       <div class="popup__image-container">
-        <img src="" alt="" class="popup__image">
+        <img src="#" alt="" class="popup__image">
         <p class="popup__image-caption"></p>
         <button type="button" aria-label="Закрыть форму" class="popup__close-button"></button>
       </div>
