--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
-    <div class="popup">
+    <div class="popup profile-popup">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <button type="button" aria-label="Закрыть форму" class="popup__close-button"></button>
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <div class="popup" id="card-popup">
+    <div class="popup card-popup">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <button type="button" aria-label="Закрыть форму" class="popup__close-button"></button>
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="popup" id="image-popup">
+    <div class="popup image-popup">
       <div class="popup__image-container">
         <img src="#" alt="" class="popup__image">
         <p class="popup__image-caption"></p>
@@ -78,6 +78,6 @@
       <button type="button" aria-label="like" class="place__like-button"></button>
     </li>
   </template>
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
