modal.js, validate.js, index.js fixed

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
             <span class="popup__input-error url-input-error" ></span>
           </label>
 
-          <button type="submit" class="popup__save-button">
+          <button type="submit" class="popup__save-button" disabled="true">
             Сохранить
           </button>
         </form>
