--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
   </header>
   <main>
     <section class="profile">
-      <img src="<%=require('./images/Jacques-Yves-Cousteau.jpg')%>" alt="фото Жака Кусто" class="profile__pic">
+      <img src="" alt="фото профиля" class="profile__pic">
       <div class="profile__info">
         <div class="profile__name-container">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name"></h1>
           <button type="button" aria-label="Редактировать профиль" class="profile__edit-button">
           </button>
         </div>
-        <p class="profile__calling">Исследователь океана</p>
+        <p class="profile__calling"></p>
       </div>
       <button type="button" aria-label="Добавить профиль" class="profile__add-button">
       </button>
