--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Место</title>
+    <link rel="icon" href="data:,">
 </head>
 <body class="page">
   <header class="header">
@@ -106,7 +107,7 @@
   </main>
   <template id="place-card">
     <li class="place">
-      <!-- <button type="button" aria-label="delete" class="place__delete-button"></button> -->
+      <button type="button" aria-label="delete" class="place__delete-button"></button>
       <img src="" alt="" class="place__image">
       <h2 class="place__name"></h2>
       <div class="place__like-container">
